# winfsp-rs

./: .gitignore  Cargo.toml  CppProperties.json  README.md
.github/workflows/: build.yml  ntptfs.yml
deprecated/: README.md
deprecated/ptfs-winfsp-rs/: Cargo.toml
deprecated/ptfs-winfsp-rs/src/: main.rs
deprecated/ptfs-winfsp-rs/src/fs/: passthrough.rs
examples/ntptfs/: Cargo.toml
examples/ntptfs/src/fs/: context.rs
examples/ntptfs/src/native/: lfs.rs  mod.rs  nt.rs  volume.rs
examples/ptfs/: Cargo.toml
examples/ptfs/src/fs/: passthrough.rs
filesystems/ntptfs-winfsp-rs/: Cargo.toml
filesystems/ntptfs-winfsp-rs/src/: lib.rs  main.rs  service.rs
filesystems/ntptfs-winfsp-rs/src/fs/: context.rs  file.rs  mod.rs  ntptfs.rs
filesystems/ntptfs-winfsp-rs/src/native/: lfs.rs  mod.rs  nt.rs  volume.rs
filesystems/ntptfs-winfsp-rs/src/native/lfs/: async_io.rs  mod.rs
ntptfs-winfsp-rs/: Cargo.toml  build.rs
ntptfs-winfsp-rs/src/: lib.rs  main.rs  service.rs
ntptfs-winfsp-rs/src/fs/: context.rs  file.rs  mod.rs  ntptfs.rs
ntptfs-winfsp-rs/src/native/: lfs.rs  mod.rs  nt.rs  volume.rs
ptfs-winfsp-rs/: Cargo.toml
ptfs-winfsp-rs/src/: main.rs  service.rs
ptfs-winfsp-rs/src/fs/: mod.rs  passthrough.rs
winfsp/: Cargo.toml  build.rs
winfsp-sys/: .gitattributes  Cargo.toml  README.md  build.rs  wrapper.h
winfsp-sys/src/: bindings.rs  lib.rs
winfsp-sys/winfsp/: .gitrev
winfsp-sys/winfsp/lib/: fuse.pc  fuse3.pc  winfsp-a64.lib  winfsp-x64.lib  winfsp-x86.lib
winfsp/src/: constants.rs  error.rs  init.rs  lib.rs  service.rs  util.rs  vsb.rs
winfsp/src/filesystem/: constants.rs  context.rs  dirbuffer.rs  directory.rs  host.rs  interface.rs  internals.rs  mod.rs  notify.rs  stream.rs  timer.rs  volume.rs
winfsp/src/filesystem/internals/: fileinfo.rs  mod.rs  volumeinfo.rs  widenameinfo.rs
winfsp/src/host/: debug.rs  fshost.rs  interface.rs  mod.rs  volumeparams.rs
winfsp/src/notify/: context.rs  mod.rs  notifier.rs  notifyinfo.rs  timer.rs
winfsp/src/util/: handle.rs  mod.rs
