[package]
name = "ntptfs-winfsp-rs"
version = "0.1.0-alpha"
edition = "2021"
license = "GPL-3.0"
description = "NTFS Passthrough File System via winfsp-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
windows = { version = "0.41.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_System_Console", "Win32_System_IO"] }
windows-sys = { version = "0.36.1", features = ["Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_Storage_FileSystem"] }
ntapi = "0.4.0"
bytemuck = "1.12.1"
widestring = "1"
winfsp = { path = "../winfsp", version = "0.5", features = ["debug", "system"] }
anyhow = "1"

[build-dependencies]
winfsp = { path = "../winfsp", version = "0.5", features = ["delayload"] }

