[package]
name = "ptfs-winfsp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntptfs-winfsp-rs = { path = "../ntptfs-winfsp-rs" }

clap = { version = "3.2", features = ["derive"] }
windows = { version = "0.39.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_System_Console", "Win32_System_IO"] }
widestring = "1"
winfsp = { path = "../winfsp", features = ["system"] }
anyhow = "1"

[build-dependencies]
winfsp = { path = "../winfsp" }

