[package]
name = "winfsp-sys"
version = "0.2.2+winfsp-2.0"
edition = "2021"
license = "GPL-3.0"
description = "Raw bindings to WinFSP"
keywords = ["filesystem", "winfsp", "fuse"]
categories = ["filesystem", "os::windows-apis", "external-ffi-bindings"]
readme = "./README.md"
repository = "https://github.com/SnowflakePowered/winfsp-rs"

[build-dependencies]
bindgen = "0.68.1"
registry = { version = "1.2.3", optional = true }

[features]
system = ["registry"]
docsrs = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
features = ["docsrs"]
