[package]
name = "winfsp-sys"
version = "0.2.2+winfsp-2.0"
edition = "2021"
license = "GPL-3.0"
description = "Raw bindings to WinFSP"
keywords = ["filesystem", "winfsp", "fuse"]
categories = ["filesystem", "os::windows-apis", "external-ffi-bindings"]
readme = "./README.md"
repository = "https://github.com/SnowflakePowered/winfsp-rs"

[build-dependencies]
bindgen = "0.72.0"
windows-registry = { version = "0.1.1", optional = true }

[features]
system = ["dep:windows-registry"]
docsrs = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
features = ["docsrs"]
