[package]
name = "winfsp"
version = "0.10.0-beta.4+winfsp-2.0"
edition = "2021"
readme = "../README.md"
license = "GPL-3.0"
description = "Rust bindings to WinFSP"
keywords = ["filesystem", "winfsp", "fuse"]
categories = ["filesystem", "os::windows-apis", "api-bindings"]
repository = "https://github.com/SnowflakePowered/winfsp-rs"

[dependencies]
winfsp-sys = { path = "../winfsp-sys", version = "0.2" }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_System_Console", "Win32_System_Threading", "Win32_System_ProcessStatus", "Wdk_Foundation"] }

widestring = "1"
thiserror = "1"
paste = "1"
static_assertions = "1.1"
bytemuck = "1.13"
async-trait = { version = "0.1.73", optional = true }

[features]
default = ["stable", "nightly", "windows-rs"]
debug = []
system = ["windows/Win32_System_Registry", "winfsp-sys/system"]
notify = []
build = []
delayload = ["build"]
docsrs = ["winfsp-sys/docsrs"]
stable = ["notify", "delayload"]
windows-rs = ["handle-util", "windows-rs-error"]
windows-rs-error = []
nightly = ["io-error", "strict-provenance"]
strict-provenance = []
io-error = []
handle-util = []
async-io = [ "async-trait" ]
full = ["stable", "nightly", "async-io"]
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
features = ["full", "docsrs"]
