[package]
name = "ntptfs-winfsp-rs"
version = "0.1.0-alpha"
edition = "2024"
license = "GPL-3.0"
description = "NTFS Passthrough File System via winfsp-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_System_Console", "Win32_System_IO",
    "Wdk_Foundation", "Wdk_Storage_FileSystem", "Wdk_System_IO", "Wdk_Storage_FileSystem_Minifilters", "Wdk_System_SystemServices", "Win32_System_Ioctl", "Win32_System_SystemServices"] }

bytemuck = "1.12.1"
widestring = "1"
winfsp = { path = "../../winfsp", features = ["debug", "system", "full"] }
anyhow = "1"
tokio =  { version = "1.32.0", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
winfsp = { path = "../../winfsp", features = ["delayload"] }
